# ql-generator

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: constant.rs  engine.rs  extractor.rs  generator.rs  lib.rs  main.rs  tasks.rs
src/engine/: chatgpt.rs
src/extractor/: codeql.rs
src/generator/: codeql.rs
tests/: integration_test.rs
