[package]
name = "ql-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.18"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
url = "2.3.1"